--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,117 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+
+*{
+  box-sizing: border-box;
+  margin: 0 !important;
+  padding: 0;
+}
+input, select{
+  outline: none;
+}
+body{
+  font-family: "Poppins", sans-serif;
+}
+.brand{
+  font-family: "Jersey 10", sans-serif;
+}
+svg{
+  display: inline-block !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.hero-icons{
+  padding-top: 60px;
+  padding-left: 100px;
+  text-align: center;
+}
+.hero-icons svg {
+  font-size: 40px;
+  margin: 10px !important;
+}
+
+#header_2{
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+.shadow-own{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+
+.puff-in-br {
+	-webkit-animation: puff-in-br 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+	        animation: puff-in-br 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
+}
+input[type=range] {
+  -webkit-appearance: none; 
+  width: 80%; 
+  background: rgb(76,29,149); 
+  border-radius: 20px;
+  height: 6px;
+  margin-bottom: 12px !important;
+}
+input[type=range]:focus {
+  outline: none; 
+}
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid #000000;
+  height: 14px;
+  width: 14px;
+  border-radius: 5px;
+  background: #ffffff;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type="checkbox"] {
+  appearance: none;
+  background-color: #fff;
+  width: 20px;
+  height: 20px;
+  border: 1px solid lightgray;
+  margin-right: 5px !important;
+  transform: translateY(0.4em);
+  border-radius: 4px;
+}
+ @-webkit-keyframes puff-in-br {
+  0% {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    -webkit-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+    -webkit-filter: blur(4px);
+            filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes puff-in-br {
+  0% {
+    -webkit-transform: scale(2);
+            transform: scale(2);
+    -webkit-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+    -webkit-filter: blur(4px);
+            filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 100% 100%;
+            transform-origin: 100% 100%;
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
 }
