--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ input[type=range]::-webkit-slider-thumb {
   cursor: pointer;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
 }
-input[type="checkbox"] {
+/* input[type="checkbox"] {
   appearance: none;
   background-color: #fff;
   width: 20px;
@@ -74,7 +74,7 @@ input[type="checkbox"] {
   margin-right: 5px !important;
   transform: translateY(0.4em);
   border-radius: 4px;
-}
+} */
  @-webkit-keyframes puff-in-br {
   0% {
     -webkit-transform: scale(2);
